[gd_scene load_steps=4 format=3 uid="uid://c4eefcvxrcypp"]

[ext_resource type="Script" path="res://scripts/level_manager.gd" id="1_xe1x5"]
[ext_resource type="Theme" uid="uid://ba8w7uwv0in7s" path="res://assets/standard.tres" id="2_qk7mt"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="3_rxvq3"]

[node name="LevelManager" type="Node"]
process_mode = 3
script = ExtResource("1_xe1x5")

[node name="PauseCanvas" type="CanvasLayer" parent="."]

[node name="PauseTint" type="ColorRect" parent="PauseCanvas"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.392157, 0.392157, 0.54902)

[node name="PauseMenu" type="CenterContainer" parent="PauseCanvas"]
process_mode = 2
visible = false
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_qk7mt")
script = ExtResource("3_rxvq3")

[node name="VerticalContainer" type="VBoxContainer" parent="PauseCanvas/PauseMenu"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2

[node name="Title" type="Label" parent="PauseCanvas/PauseMenu/VerticalContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "game is paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="PauseCanvas/PauseMenu/VerticalContainer"]
layout_mode = 2
text = "Resume"

[node name="Exit" type="Button" parent="PauseCanvas/PauseMenu/VerticalContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="PauseCanvas/PauseMenu/VerticalContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseCanvas/PauseMenu/VerticalContainer/Exit" to="." method="_on_exit_pressed"]
